--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/webpack-dev-server": "^4.1.0",
+    "axios": "^0.22.0",
     "css-loader": "^6.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
