--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "style-loader": "^3.3.0",
+    "swr": "^1.0.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
