--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.3.0",
     "@loadable/component": "^5.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
+    "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/webpack-dev-server": "^4.1.0",
@@ -23,6 +24,7 @@
     "css-loader": "^6.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "gravatar": "^1.8.2",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
