--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "react-refresh": "^0.10.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^8.0.3",
     "style-loader": "^3.3.0",
     "swr": "^1.0.1",
     "ts-node": "^10.2.1",
