--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-mentions": "^4.3.0",
     "react-refresh": "^0.10.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
