--- a/front/package.json
+++ b/front/package.json
@@ -20,15 +20,21 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/webpack-dev-server": "^4.1.0",
+    "autosize": "^5.0.1",
     "axios": "^0.22.0",
     "css-loader": "^6.3.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.22.0",
     "gravatar": "^1.8.2",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-mentions": "^4.3.0",
+    "react-mentions": "^4.3.1",
     "react-refresh": "^0.10.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
@@ -43,8 +49,10 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/autosize": "^4.0.1",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.10.1",
+    "@types/react-mentions": "^4.1.5",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.0",
     "@types/webpack": "^5.28.0",
